Adição do arquivo de configuração do servidor de autenticação

--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -37,4 +37,7 @@ spring:
         generate-ddl: false
         hibernate:
             ddl-auto: none
+            jdbc:
+              lob:
+                non_contextual_creation: true
         show-sql: true
