--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -35,9 +35,11 @@ spring:
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         generate-ddl: false
-        hibernate:
+        hibernate:        
             ddl-auto: none
-            jdbc:
-              lob:
-                non_contextual_creation: true
         show-sql: true
+        properties:
+            hibernate:
+                jdbc:
+                    lob:
+                        non_contextual_creation: true
