--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -40,6 +40,7 @@ spring:
         show-sql: true
         properties:
             hibernate:
+               dialect:org.hibernate.dialect.PostgreSQL9Dialect
                 jdbc:
                     lob:
                         non_contextual_creation: true
