--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -28,7 +28,7 @@ spring:
         data: classpath:/sql/data.sql
         driver-class-name: org.postgresql.Driver
         password: 'postgres'
-        platform: postgresql
+        platform: all
         schema: classpath:/sql/schema.sql
         url: jdbc:postgresql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: postgres
@@ -37,10 +37,13 @@ spring:
         generate-ddl: false
         hibernate:        
             ddl-auto: none
+            jdbc:
+                lob:
+                    non_contextual_creation: true
         show-sql: true
-        properties:
-            hibernate:
-               dialect:org.hibernate.dialect.PostgreSQL9Dialect
-                jdbc:
-                    lob:
-                        non_contextual_creation: true
+        #properties:
+         #   hibernate:
+          #     dialect:org.hibernate.dialect.PostgreSQL9Dialect
+           #     jdbc:
+            #        lob:
+             #           non_contextual_creation: true
