--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -33,7 +33,7 @@ spring:
         url: jdbc:postgresql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: postgres
     jpa:
-        database-platform: org.hibernate.dialect.PostgreSQLDialect
+        database-platform: org.hibernate.dialect.PostgreSQL94Dialect
         generate-ddl: false
         hibernate:        
             ddl-auto: none
