--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -26,24 +26,21 @@ security:
 spring:
     datasource:
         data: classpath:/sql/data.sql
-        driver-class-name: org.postgresql.Driver
-        password: 'postgres'
-        platform: all
+        driver-class-name: org.postgresql.Driver        
+        platform: postgres
         schema: classpath:/sql/schema.sql
-        url: jdbc:postgresql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:postgresql://localhost:5432/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: postgres
+        password: 'postgres'
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQL94Dialect
         generate-ddl: false
         hibernate:        
             ddl-auto: none
-            jdbc:
-                lob:
-                    non_contextual_creation: true
         show-sql: true
-        #properties:
-         #   hibernate:
-          #     dialect:org.hibernate.dialect.PostgreSQL9Dialect
-           #     jdbc:
-            #        lob:
-             #           non_contextual_creation: true
+        properties:
+            hibernate:
+               #dialect:org.hibernate.dialect.PostgreSQL9Dialect
+                jdbc:
+                    lob:
+                        non_contextual_creation: true
