--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -15,7 +15,7 @@ eureka:
 
 security:
     oauth2:
-        client:e
+        client:
             access-token-validity-seconds: 1800
             authorized-grant-types: password,refresh_token
             client-id: coderef
