--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -36,7 +36,7 @@ spring:
         database-platform: org.hibernate.dialect.PostgreSQL94Dialect
         generate-ddl: false
         hibernate:        
-            ddl-auto: validate
+            ddl-auto: none
         show-sql: true
         properties:
             hibernate:               
