--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -25,7 +25,7 @@ security:
 
 spring:
     datasource:
-        data: classpath:/sql/data.sql
+        #data: classpath:/sql/data.sql
         driver-class-name: org.postgresql.Driver        
         platform: postgres
         schema: classpath:/sql/schema.sql
