retirando comentario sql

--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -25,10 +25,10 @@ security:
 
 spring:
     datasource:
-        #data: classpath:/sql/data.sql
+        data: classpath:/sql/data.sql
         driver-class-name: org.postgresql.Driver        
         platform: postgres
-        schema: classpath:/sql/schema.sql
+        #schema: classpath:/sql/schema.sql
         url: jdbc:postgresql://localhost:5432/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: postgres
         password: 'postgres'
