--- a/lojas-pires-auth-server.yml
+++ b/lojas-pires-auth-server.yml
@@ -28,15 +28,17 @@ spring:
         data: classpath:/sql/data.sql
         driver-class-name: org.postgresql.Driver        
         platform: postgres
-        #schema: classpath:/sql/schema.sql
+        schema: classpath:/sql/schema.sql
         url: jdbc:postgresql://localhost:5432/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
         username: postgres
         password: 'postgres'
     jpa:
         database-platform: org.hibernate.dialect.PostgreSQL94Dialect
-        generate-ddl: true
+        #generate-ddl: true
+        generate-ddl: false
         hibernate:        
-            ddl-auto: create-drop
+            #ddl-auto: create-drop
+            ddl-auto: none
         show-sql: true
         properties:
             hibernate:               
