--- a/lojas-pires-auth2-server.yml
+++ b/lojas-pires-auth2-server.yml
@@ -12,3 +12,26 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 3000
+    
+spring:
+    datasource:
+        #data: classpath:/sql/data.sql
+        driver-class-name: org.postgresql.Driver        
+        platform: postgres
+        #schema: classpath:/sql/schema.sql
+        url: jdbc:postgresql://localhost:5432/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        username: postgres
+        password: 'postgres'
+    jpa:
+        database-platform: org.hibernate.dialect.PostgreSQL94Dialect
+        generate-ddl: true
+        #generate-ddl: false
+        hibernate:        
+            ddl-auto: create-drop
+            #ddl-auto: none
+        show-sql: true
+        properties:
+            hibernate:               
+                jdbc:
+                    lob:
+                        non_contextual_creation: true
