--- a/lojas-pires-pedidos.yml
+++ b/lojas-pires-pedidos.yml
@@ -13,6 +13,11 @@ eureka:
   server:
     wait-time-in-ms-when-sync-empty: 3000
     
+security:
+    oauth2:
+        client:            
+            scope: password
+    
 spring:
     datasource:
         #data: classpath:/sql/data.sql
