adição de config para encontrar o servidor Auth

--- a/lojas-pires-pedidos.yml
+++ b/lojas-pires-pedidos.yml
@@ -40,3 +40,10 @@ spring:
                 jdbc:
                     lob:
                         non_contextual_creation: true
+
+authserver:
+  hostname: http://localhost:9092
+security:
+  oauth2:
+    resource:
+      userInfoUri: ${authserver.hostname}/user
